2025-03-15T01:39:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13868203962 # 1182
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-03-15
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3502 / 0 3504 / +0 +2

2025-03-14T01:40:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13848100437 # 1180
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-03-14
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3500 / 0 3502 / +0 +2

2025-03-13T01:42:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13825180857 # 1178
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-03-13
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3496 / 0 3500 / +0 +4

2025-03-12T12:41:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13811601488 # 1177
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-03-12
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3492 / 0 3496 / +0 +4

2025-03-12T01:40:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13801820038 # 1176
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-03-12
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3491 / 0 3492 / +0 +1

2025-03-11T01:41:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13778486324 # 1174